--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "TG URL Uploader",
+  "name": "RSR DOWNLOADER",
   "description": "Telegram's best Open Source ALL-In-One Multi Purpose RoBot. Create your Fork now.",
   "keywords": [
     "telegram",
@@ -14,9 +14,9 @@
     "remote",
     "uploader"
   ],
-  "success_url": "https://telegram.dog/AnyDLBot",
-  "website": "https://github.com/SpEcHiDe/AnyDLBot",
-  "repository": "https://github.com/SpEcHiDe/AnyDLBot",
+  "success_url": "https://telegram.dog/mizolibrary",
+  "website": "https://library-mizo.blogspot.com",
+  "repository": "https://github.com/RSR-TG-Info/Downloader",
   "env": {
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
@@ -40,7 +40,7 @@
     },
     "AUTH_USERS": {
       "description": "allow only pre-defined users to use this bot",
-      "value": "7351948 20516707 23122162 500346573"
+      "value": "1060318977"
     },
     "BANNED_USERS": {
       "description": "Banned Unwanted members..",
